# tst

./: README.md  package.json  pyproject.toml
tst/: api.py  email.py  hooks.py  insert_reports_to.py  invoice_bundel.py  modules.txt  override.py  patches.py  patches.txt  supplier.js  whatsapp.py
tst/fixtures/: custom_field.json  po_types.json  property_setter.json
tst/public/js/: employee.js  employee_list.js  quotation_template.js  rfq.js  sales_invoice.js  upload_serials.js  upload_serials_pr.js  upload_serials_str.js
tst/public/offer داش كام/: index.html
tst/public/نموذج خدمات/: index.html
tst/templates/emails/: inv_attachments.html
tst/translations/: _temp.csv  ar.csv
tst/triggers/buying/: supplier_quotation.js
tst/triggers/crm/: supplier.js
tst/tst/custom/: address.json  appointment.json  asset_custody_request.json  asset_movement.json  customer.json  delivery_note.json  delivery_note_item.json  employee.json  item.json  item_barcode.json  item_default.json  item_price.json  lead.json  location.json  material_request.json  material_request_item.json  packed_item.json  product_bundle.json  product_bundle_item.json  purchase_invoice.json  purchase_invoice_item.json  purchase_order.json  purchase_receipt.json  purchase_receipt_item.json  quotation.json  quotation_item.json  request_for_quotation.json  request_for_quotation_item.json  request_for_quotation_supplier.json  salary_structure_assignment.json  sales_invoice.json  sales_invoice_item.json  sales_order.json  sales_order_item.json  sales_taxes_and_charges.json  (+10 more)
tst/www/: Device-Setup.html
(+286 files in other folders)
