[project]
name = "tst"
authors = [
    { name = "Ahmed Emam", email = "ahmedemamhatem@gmail.com" }
]
description = "TST Customizations"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "pandas",
    "openpyxl",
    "geopy>=2.3.0,<3.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
